Fixed Flipcards on Firefox

--- a/src/app/grid/grid.component.sass
+++ b/src/app/grid/grid.component.sass
@@ -58,6 +58,7 @@ img#servicesImages
         height: 175px
 /* entire container, keeps perspective */
 .flip-container
+    cursor: pointer
     perspective: 1000px
     h2
         font-size: 1.5em
