--- a/src/app/search-detail/search-detail.component.sass
+++ b/src/app/search-detail/search-detail.component.sass
@@ -24,6 +24,7 @@ a
             height: 175px
     /* entire container, keeps perspective */
     .flip-container
+        cursor: pointer
         perspective: 1000px
         h2
             font-size: 1.5em
